--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Olá, mundo!
+<!DOCTYPE html>
+<html>
+<head>
+	<title>3elle</title>
+	<style>
+		body {
+			background-color: #000; /* Fundo preto */
+		}
+		
+		.container {
+			width: 80%;
+			margin: 40px auto;
+			text-align: center;
+		}
+		
+		h1 {
+			color: #fff; /* Cor do texto branco */
+			font-size: 64px; /* Tamanho do texto grande */
+		}
+		
+		h1 span:first-child {
+			font-size: 64px; /* Tamanho do texto grande */
+		}
+		
+		h1 span:last-child {
+			font-size: 40px; /* Tamanho do emoji */
+		}
+		
+		p {
+			color: #fff; /* Cor do texto branco */
+			font-size: 24px; /* Tamanho do subtítulo */
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<h1><span>3elle</span> <span>😊</span></h1>
+		<p>Em breve mais designers</p>
+	</div>
+</body>
+</html>
